--- a/week1/index.html
+++ b/week1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>햄식이를 도와줘</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -14,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>햄식이를 도와줘</title>
+    <script src="main.js" defer></script>
   </head>
   <body>
     <header>
@@ -207,10 +208,20 @@
           <span>0원</span>
         </div>
         <div class="cart__btn-group">
-          <button>주문하기</button>
-          <button>취소하기</button>
+          <button class="cart__order-btn">주문하기</button>
+          <button class="cart__cancel-btn">취소하기</button>
         </div>
       </aside>
     </main>
+    <div class="modal">
+      <div class="modal__background"></div>
+      <div class="modal__body">
+        <p>정말 주문하시겠어요?</p>
+        <div class="modal__btn-group">
+          <a href="complete.html">예</a>
+          <button class="modal__close-btn">아니오</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
