feat: 장바구니에 태그 동적으로 삽입하고 삭제하기

--- a/week1/index.html
+++ b/week1/index.html
@@ -200,9 +200,8 @@
         </article>
       </section>
       <aside class="cart">
-        <div class="cart__items">
-          <h3>🛒 장바구니</h3>
-        </div>
+        <h3>🛒 장바구니</h3>
+        <ul class="cart__list"></ul>
         <div class="cart__sum">
           <h3>💵 누적 금액</h3>
           <span>0원</span>
