--- a/week1/index.html
+++ b/week1/index.html
@@ -117,85 +117,55 @@
         </article>
         <article class="burger__card">
           <img
-            src="http://www.shakeshack.kr/images/sub/burger_200402_01.jpg"
-            alt="쉑버거"
+            src="http://www.shakeshack.kr/images/sub/chicken_220208_02.jpg"
+            alt="핫치킨"
           />
           <div class="burger__content">
-            <h2 class="burger__name">쉑버거</h2>
-            <div class="burger__price">7,300원</div>
+            <h2 class="burger__name">핫치킨</h2>
+            <div class="burger__price">8,900원</div>
             <p class="burger__description">
-              비프패티와 함께 토마토, 양상추 쉑소스가 토핑된 치즈버거
+              닭가슴 통살을 바삭하게 튀겨낸 후, 아삭한 식감의 콜라비를 섞은 체리
+              페퍼 슬로와 핫 스파이시 시즈닝으로 매운 맛을 낸 시즌 한정 치킨
+              버거
             </p>
           </div>
         </article>
         <article class="burger__card">
           <img
-            src="http://www.shakeshack.kr/images/sub/burger_200402_02.jpg"
-            alt="스모크쉑"
+            src="http://www.shakeshack.kr/images/sub/dog_210302.jpg"
+            alt="플랫탑도그"
           />
           <div class="burger__content">
-            <h2 class="burger__name">스모크쉑</h2>
-            <div class="burger__price">9,300원</div>
+            <h2 class="burger__name">플랫탑도그</h2>
+            <div class="burger__price">4,600원</div>
             <p class="burger__description">
-              애플 우드 칩으로 훈연한 짭짤한 베이컨, 매콤한 체리페퍼, 비프패티와
-              쉑소스가 토핑된 치즈버거
+              쫄깃한 토종 효모 포테이토 번 위에 참나무 칩으로 훈연한 비프
+              소시지가 들어간 담백한 핫 도그
             </p>
           </div>
         </article>
         <article class="burger__card">
           <img
-            src="http://www.shakeshack.kr/images/sub/burger_200402_03.jpg"
-            alt="슈룸버거"
+            src="http://www.shakeshack.kr/images/sub/fries_200402_02.jpg"
+            alt="치즈프라이"
           />
           <div class="burger__content">
-            <h2 class="burger__name">슈룸버거</h2>
-            <div class="burger__price">9,600원</div>
+            <h2 class="burger__name">치즈프라이</h2>
+            <div class="burger__price">5,200원</div>
             <p class="burger__description">
-              치즈로 속을 채우고 바삭하게 튀겨낸 포토벨로 버섯 패티에 양상추,
-              토마토, 쉑소스를 올린 베지테리안 버거
+              쉐이크쉑만의 특별한 치즈 소스를 듬뿍 올린 바삭한 크링클 컷 프라이
             </p>
           </div>
         </article>
         <article class="burger__card">
           <img
-            src="http://www.shakeshack.kr/images/sub/burger_200402_04.jpg"
-            alt="쉑 스택"
+            src="http://www.shakeshack.kr/images/sub/fries_200402_01.jpg"
+            alt="프라이"
           />
           <div class="burger__content">
-            <h2 class="burger__name">쉑 스택</h2>
-            <div class="burger__price">13,100원</div>
-            <p class="burger__description">
-              포토벨로 버섯패티, 비프패티와 함께 토마토, 양상추, 쉑소스가 토핑된
-              치즈버거
-            </p>
-          </div>
-        </article>
-        <article class="burger__card">
-          <img
-            src="http://www.shakeshack.kr/images/sub/burger_200402_05.jpg"
-            alt="햄버거"
-          />
-          <div class="burger__content">
-            <h2 class="burger__name">햄버거</h2>
-            <div class="burger__price">5,700원</div>
-            <p class="burger__description">
-              고소한 포테이토 번과 비프패티의 풍미 그대로를 느낄 수 있는 기본에
-              충실한 버거
-            </p>
-          </div>
-        </article>
-        <article class="burger__card">
-          <img
-            src="http://www.shakeshack.kr/images/sub/chicknshack_200529.jpg"
-            alt="치킨쉑"
-          />
-          <div class="burger__content">
-            <h2 class="burger__name">치킨쉑</h2>
-            <div class="burger__price">7,900원</div>
-            <p class="burger__description">
-              버터밀크에 수비드한 후 바삭하게 튀겨낸 치킨 패티에 양상추, 피클,
-              허브마요 소스를 곁들인 버거
-            </p>
+            <h2 class="burger__name">프라이</h2>
+            <div class="burger__price">4,100원</div>
+            <p class="burger__description">바삭하고 담백한 크링클컷 프라이</p>
           </div>
         </article>
       </section>
