--- a/week3/public/index.html
+++ b/week3/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>개발자 밸런스 게임</title>
+    <title>킹받는 개발 월드컵</title>
   </head>
   <body>
     <div id="root"></div>
